--- a/README
+++ b/README
@@ -1,2 +1,1 @@
-
-code for tickling a Heitzman brake controller when RT range range values are within threshold provided by a set of thumbwheel switches
+Code for running a test vehicle display
